@@ -17,16 +17,24 @@
 package de.adorsys.psd2.xs2a.service.validator.ais.account.dto;
 
 import de.adorsys.psd2.core.data.ais.AisConsent;
+import de.adorsys.psd2.xs2a.core.profile.AccountReference;
 import de.adorsys.psd2.xs2a.core.tpp.TppInfo;
 import de.adorsys.psd2.xs2a.service.validator.TppInfoProvider;
 import lombok.Value;
 
+import java.util.List;
+
 @Value
 public class DownloadTransactionListRequestObject implements TppInfoProvider {
     private AisConsent aisConsent;
+    private String accountId;
 
     @Override
     public TppInfo getTppInfo() {
         return aisConsent.getTppInfo();
+    }
+
+    public List<AccountReference> getTransactions() {
+        return aisConsent.getAspspAccountAccesses().getTransactions();
     }
 }
